@@ -138,6 +138,7 @@ Steve Láposi
 Daniel Larsson
 Peter Lawler
 Ho-seok Lee
+Jean-Yves Lefort
 Moses Lei
 Ambrose C. Li
 Nicolas Lichtmaier
